--- a/README.html
+++ b/README.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=devicewidth, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Alt Stack | README</title>
+	<title>R2 Practice | README</title>
 </head>
 
 <body>
@@ -20,22 +20,20 @@
 	<div class="scenario">
 
 		<h2>Scenario</h2><br>
-		<p>You have been brought on by Jack on behalf of the Linux portion of the Leadership Team to configure their machine hosting a website pertaining to next year's LT.</p>
-		<p>You have been given an admin account named cyber. You need not change his password. Your goal is to properly configure the critical services hosting the website as well as securing the rest of the system.</p>
-		<p>There was a recent breach in the system as an unauthorized user obtained escalated privileges. Please disallow them from accessing the Nginx server by blacklisting all connections from 188.199.10.0/24. For addition protection, whitelist the ipaddress 192.168.10.0. This should be the address of the current system. If it not, please change it.</p>
-		<p>Additionally, Matthew is having trouble configuring Samba correctly and none of the other lab managers help him. You have been given the additional task of fixing the conf file for Samba.</p>
+		<p>You have been brought on by Jack on behalf of the Leadership Team to configure one of their machines.</p>
+		<p>You have been given jack's admin account. You need not change your password. Your goal is to properly configure the critical services as well as securing the rest of the system.</p>
+		<p>There was a recent breach in the system as an unauthorized user obtained escalated privileges. Please disallow all nonadmin users from accessing the ftp server as they do not need to send or recieve files.</p>
+		<p>Additionally, Wachter has installed some malware on this machine by accident, please delete it.</p>
 		<p>Root's password is the same as yours. Google is your friend. Good luck!</p>
 		
 	</div>
 	
 	<div class="services">
 		<h2>Services and Applications</h2><br>
-		<p>Nginx</p><br>
-		<p>Port 443</p><br>
-		<p>PostgreSQL postgres:no password</p><br>
-		<p>Port 8080p>
-		<p>PHP 8.2</p><br>
-		<p>Samba</p><br>
+		<p>SSH</p><br>
+		<p>Port 22</p><br>
+		<p>FTP</p><br>
+		<p>Port 21</p><br>
 		
 	</div>
 	<div class="users">
@@ -43,17 +41,20 @@
 		<h3>Admins:</h3><br>
 		<p>
 		Jack (you) : !K@l1_0v3R_@ll!<br>
-    Matthew : L3fT_Surf@c3_@t_Sch00l<br>
-    Watcher : ??H@ck_Th3_B0x??<br>
-   	Kieran : D0n3_W1th_@d1@n>:(<br>
+    		Matthew : L3fT_Surf@c3_@t_Sch00l<br>
+   		Watcher : ??H@ck_Th3_B0x??<br>
+   		Kieran : D0n3_W1th_@d1@n>:(<br>
 		</p>
 		<h3>Users:</h3><br>
 		<p>
-		Coyne<br>
-    Rocca<br>
-   	Wawa<br>
-    Cole<br>
-    Kocorowski<br>
+		Aidan<br>
+    		James<br>
+   		Ryan<br>
+    		Ben<br>
+    		Will<br>
+		Dimitri<br>
+		Teddy<br>
+		Henry<br>
 		</p>
 	</div>
 </body>
