--- a/README.html
+++ b/README.html
@@ -24,7 +24,8 @@
 		<p>You have been given jack's admin account. You need not change your password. Your goal is to properly configure the critical services as well as securing the rest of the system.</p>
 		<p>There was a recent breach in the system as an unauthorized user obtained escalated privileges. Please disallow all nonadmin users from accessing the ftp server as they do not need to send or recieve files.</p>
 		<p>Additionally, Wachter has installed some malware on this machine by accident, please delete it.</p>
-		<p>Root's password is the same as yours. Google is your friend. Good luck!</p>
+		<p>Finally, for organizational purposes, the team wants you to create the group Training_Leads and add the accounts of the three training leads to the group (you know who they are, right?).</p>
+		<p>Root's password is the same as jack's. Google is your friend. Good luck!</p>
 		
 	</div>
 	
