--- a/ScoreReport.html
+++ b/ScoreReport.html
@@ -16,28 +16,28 @@
 		</div>
 	</nav>
 	<div class="points">
-		<p>Vuln1</p>
-		<p>Vuln2</p>
-		<p>Vuln3</p>
-		<p>Vuln4</p>
-		<p>Vuln5</p>
-		<p>Vuln6</p>
-		<p>Vuln7</p>
-		<p>Vuln8</p>
-		<p>Vuln9</p>
-		<p>Vuln10</p> 
-		<p>Vuln11</p>
-		<p>Vuln12</p>
-		<p>Vuln13</p>
-		<p>Vuln14</p>
-		<p>Vuln15</p>
-		<p>Vuln16</p>
-		<p>Vuln17</p>
-		<p>Vuln18</p>
-		<p>Vuln19</p>
-		<p>Vuln20</p>
-		<p>Vuln21</p>
-		<p>Vuln22</p>
+		<p>vuln1</p>
+		<p>vuln2</p>
+		<p>vuln3</p>
+		<p>vuln4</p>
+		<p>vuln5</p>
+		<p>vuln6</p>
+		<p>vuln7</p>
+		<p>vuln8</p>
+		<p>vuln9</p>
+		<p>vuln10</p> 
+		<p>vuln11</p>
+		<p>vuln12</p>
+		<p>vuln13</p>
+		<p>vuln14</p>
+		<p>vuln15</p>
+		<p>vuln16</p>
+		<p>vuln17</p>
+		<p>vuln18</p>
+		<p>vuln19</p>
+		<p>vuln20</p>
+		<p>vuln21</p>
+		<p>vuln22</p>
 		
 		
 	</div>
