--- a/README.html
+++ b/README.html
@@ -41,9 +41,9 @@
 		<h2>Authorized Users</h2><br>
 		<h3>Admins:</h3><br>
 		<p>
-		Jack (you) : !K@l1_0v3R_@ll!<br>
+		jack (you) : !K@l1_0v3R_@ll!<br>
     		Matthew : L3fT_Surf@c3_@t_Sch00l<br>
-   		Watcher : ??H@ck_Th3_B0x??<br>
+   		Wachter : ??H@ck_Th3_B0x??<br>
    		Kieran : D0n3_W1th_@d1@n>:(<br>
 		</p>
 		<h3>Users:</h3><br>
